# Document  $Id$
# Summary   File-changelog for the internationalization data files of the
#           chemical-mime-data project.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* chemical-mime-data.pot: Updated.

	* de.po: Updated.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* chemical-mime-data.pot: The first update after our change to the new
	database format. Translator, please update your translations.

	* de.po: Updated.

2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* de.po: Updated. Added a more information to the header.

2006-04-30 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* POTFILES.in: Changed to src/chemical-mime-data.xml.in. Removed all
	other files. We will just need the new database.

	* de.po: Updated to fit latest changes.

	* fr.po: Removed, because outdated.

	* nl.po: Ditto.

2006-01-27 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* chemical-mime-data.pot: Update after fixing bugs in kde/*.desktop
	files.

	* de.po: Ditto.

	* fr.po: Ditto.

	* nl.po: Ditto.

2006-01-02 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* ChangeLog: Changed used CVS keyword to a local one. More useful
	summary.
	
	* de.po: Fixed headers of the file. Fixed copyright info.

	* fr.po: Ditto.

	* nl.po: Ditto.

2005-09-19 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* fr.po: Added French translation. Thanks to Jean Bréfort.

2005-06-30 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* ChangeLog: Fixed syntax. Added a bit more info.

2005-05-06 Daniel Leidert <daniel.leidert.spam@gmx.net>
	
	* POTFILES.in: Added missing files.
	
2005-05-03 Daniel Leidert <daniel.leidert.spam@gmx.net>
	
	* chemicalMIME.pot: Removed (obsolete).

2005-03-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	
	* POTFILES.in: Fixed (file remove in ../kde).
	
2005-03-11 Daniel Leidert <daniel.leidert.spam@gmx.net>
	
	* ChangeLog: Added for 'dist'-target.

2005-03-10 Daniel Leidert <daniel.leidert.spam@gmx.net>
