@@ -2,6 +2,14 @@
 # Summary   File-changelog for the internationalization data files of the
 #           chemical-mime-data project.
 
+2006-05-05 Jerome Pansanel < j.pansanel@pansanel.net>
+
+	* add fr.po
+
+	* chemical-mime-data.pot: Updated.
+
+	* de.po: Updated
+
 2006-05-02 Daniel Leidert <daniel.leidert.spam@gmx.net>
 
 	* chemical-mime-data.pot: Updated.
